--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	 <title>
-   geovani's 
+   geovani's stealing the diamond
   </title>
 
 </head>
@@ -12,7 +12,7 @@
   <body>
     
     <style> body {background-color: #000000 }</style>
-    <embed src="swfhere.swf" width="850" height="600"> </embed>
+    <embed src="std.swf" width="850" height="600"> </embed>
 
    <script src="ruffle.js"></script>
 
