--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
-
-<!DOCTYPE html>
-
-
-<head>
-	 <title>
-   geovani's stealing the diamond
-  </title>
-
-</head>
-
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>geovani's stealing the diamond</title>
+    <link rel="icon" type="image/x-icon" href="index.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="index.jpg" />
+  </head>
   <body>
-    
-    <style> body {background-color: #000000 }</style>
-    <embed src="std.swf" width="850" height="600"> </embed>
-
-   <script src="ruffle.js"></script>
-
-</body>
+    <script src="/js/main.js"></script>
+    <div id="ruffle" width="100%" height="100%"></div>
+    <script src="ruffle.js"></script>
+    <script>
+      window.RufflePlayer = window.RufflePlayer || {};
+      window.addEventListener("load", (event) => {
+        const ruffle = window.RufflePlayer.newest();
+        const player = ruffle.createPlayer();
+        const container = document.getElementById("ruffle");
+        player.id = "player";
+        player.style.width = "100%";
+        player.style.height = "100%";
+        container.appendChild(player);
+        player.load("std.swf");
+      });
+    </script>
+  </body>
 </html>
